--- a/folders/mision.html
+++ b/folders/mision.html
@@ -18,15 +18,30 @@
 
 
     <header>
-            <nav>
-                   <ul>
-                <li><a href="cultura-cafe.html">Cultura de Cafecito</a></li>
-                <li><a href="recetas.html">Recetas de Cafecito</a></li>
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
                 <li class="cafecito-animacion"><a href="../index.html"> <img src="../assets/cafe-logo.png" width="120px"></a></li>
-                <li><a href="mision.html">Nuestra misión</a></li>
-                <li><a href="formulario.html">Sumate a la cafeinomanía</a></li>
-            </ul>
-            </nav>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="../folders/cultura-cafe.html">Cultura de Cafecito</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../folders/recetas.html">Recetas de Cafecito</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../folders/mision.html">Nuestra misión</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../folders/formulario.html">Sumate a la cafeinomanía</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
         </header>
         <main>
             <h2 id="tituloPagina">Nuestra misión</h2>
