--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta name="keywords" content="Café, Recetas de Café, Cultura de Café">
     <meta name="description" content="Bienvenidos a El Cafecito. El lugar para el amante de café, donde vas a encontrar recetas y la mejor informacion"> 
     <title>El cafecito ☕/ Inicio</title> 
-    <link rel="stylesheet" href="./css/styles.css"> 
-
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,18 +15,41 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+
+<link rel="stylesheet" href="./css/styles.css"> 
+
+
 </head>
 <body>
     <header>
-        <nav class="barraNavegacion">
-            <ul>
-                <li><a href="./folders/cultura-cafe.html">Cultura de Cafecito</a></li>
-                <li><a href="./folders/recetas.html">Recetas de Cafecito</a></li>
+        
+
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
                 <li class="cafecito-animacion"><a href="index.html"> <img src="./assets/cafe-logo.png" width="120px"></a></li>
-                <li><a href="./folders/mision.html">Nuestra misión</a></li>
-                <li><a href="./folders/formulario.html">Sumate a la cafeinomanía</a></li>
-            </ul>
-        </nav>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Cultura de Cafecito</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Recetas de Cafecito</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Nuestra misión</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Sumate a la cafeinomanía</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <h2 id="tituloPagina">¡Bienvenidos!</h2>
@@ -45,5 +67,6 @@
             Sitio creado por Daniel Bavio, con amor y cafeina ☕
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
